--- a/src/button-dropdown/category-elements/styles.scss
+++ b/src/button-dropdown/category-elements/styles.scss
@@ -48,6 +48,7 @@ $option-padding-horizontal: awsui.$space-l;
       // reset padding when adding border back in
       padding: styles.$option-padding-vertical $option-padding-horizontal;
       border: awsui.$border-item-width solid awsui.$color-border-item-focused;
+      box-shadow: inset 0 0 0 1px awsui.$color-border-item-focused;
       border-radius: awsui.$border-item-radius;
       z-index: 2;
       &.disabled {
@@ -56,6 +57,7 @@ $option-padding-horizontal: awsui.$space-l;
       }
       &:hover {
         border-color: awsui.$color-border-dropdown-item-hover;
+        box-shadow: none;
         &.disabled {
           border-color: awsui.$color-border-dropdown-item-dimmed-hover;
         }
