--- a/src/button-dropdown/item-element/styles.scss
+++ b/src/button-dropdown/item-element/styles.scss
@@ -35,6 +35,7 @@
     &.variant-primary {
       background-color: awsui.$color-background-dropdown-item-hover;
       border-color: awsui.$color-border-item-focused;
+      box-shadow: inset 0 0 0 1px awsui.$color-border-item-focused;
       border-radius: awsui.$border-item-radius;
 
       &.disabled {
@@ -44,6 +45,7 @@
 
       &:hover {
         border-color: awsui.$color-border-dropdown-item-hover;
+        box-shadow: none;
         &.disabled {
           border-color: awsui.$color-border-dropdown-item-dimmed-hover;
         }
