--- a/src/table/styles.scss
+++ b/src/table/styles.scss
@@ -113,9 +113,9 @@
 .selection-control {
   position: relative;
   box-sizing: border-box;
-  width: 5.4 * styles.$base-size;
-  max-width: 5.4 * styles.$base-size;
-  min-width: 5.4 * styles.$base-size;
+  width: awsui.$size-table-selection-horizontal;
+  max-width: awsui.$size-table-selection-horizontal;
+  min-width: awsui.$size-table-selection-horizontal;
   &.selection-control-header {
     padding: awsui.$space-scaled-xs awsui.$space-scaled-l;
     border-left: awsui.$border-item-width solid transparent;
